readme, components, imports/exports setup

--- a/mysti_tarot/src/App.css
+++ b/mysti_tarot/src/App.css
@@ -36,3 +36,13 @@
     transform: rotate(360deg);
   }
 }
+
+
+/*  COLOR PALETTE
+BLACK - 272928
+CREAM - E3DDDD
+GREEN - 98AE92
+BLUE - 7F97A4
+RED - DF414E
+PINK - 93586C
+*/
