--- a/mysti_tarot/src/App.css
+++ b/mysti_tarot/src/App.css
@@ -14,7 +14,7 @@
 
       #header{
         background-color: #98AE92;
-        max-width: 1120px;
+        max-width: 1100px;
         height: 10px;
         padding-top: 5px;
         padding-bottom: 35px;
@@ -32,11 +32,11 @@
         display: flex;
         flex-direction: row;
         max-width: 1100px;
-        height: 40px;
+        height: 55px;
         justify-content: center;
         align-items: center;
         margin:0 auto;
-        padding: 10px;
+        padding: 8px;
         position: relative;
         font-family: 'Philosopher', sans-serif;
         font-style: bold;
@@ -44,10 +44,13 @@
         border-bottom: 2px solid black;
         border-left: 1px solid black;
         border-right: 1px solid black;
+        /* align-items: flex-end; */
+
       }
       
       #mysti{
         font-size: 60px;
+        padding-top:10px;
       }
 
       #leftLinks{
@@ -82,7 +85,7 @@
 /* TITLE CONTAINER ******************CUPS/SWORDS/PENTACLES/WANDS/MAJOR************************************************/
 
       .titleContainer{
-        max-width: 1120px;
+        max-width: 1100px;
         /* min-width: 600px; */
         background-color: #98AE92;
         color:#E3DDDD;
@@ -92,6 +95,7 @@
         border-left: 1px solid black;
         border-right: 1px solid black;
         padding-bottom: 10px;
+
       }
                   
       .titleText{
@@ -100,13 +104,13 @@
         max-width: 1000px;
         margin: 0 auto;
         box-shadow: 8px 8px 4px rgba(0, 0, 0, 0.2);
-        height: 38px;
+        font-size: 1000px;
       }
 
       #titleSpacer{
         height: 50px;
         background-color: #98AE92;
-        max-width: 1120px;
+        max-width: 1100px;
         margin: 0 auto;
         border-left: 1px solid black;
         border-right: 1px solid black;
@@ -118,7 +122,7 @@
 
       .redirectContainer{
         background-color: #98AE92;
-        max-width: 1120px;
+        max-width: 1100px;
         height: 60px;
         margin: 0 auto;
         border-left: 1px solid black;
@@ -127,7 +131,7 @@
       }
 
       .redirectBtnsContainer{
-        width:950px;
+        max-width:950px;
         height:35px;
         margin: 0 auto;
         background-color: #E3DDDD;
@@ -139,13 +143,8 @@
         border-bottom: 2px solid #272928;
         border-right: 2px solid #272928;
       }
-
-      #redirectBtn:hover {
-        background-color: #2e2e2e;
-        transform: translateYp(-2x);
-      }
-
-
+      
+      
       #redirectBtn{
         width:240px;
         background-color: #323333;
@@ -153,9 +152,15 @@
         font-size: 26px;
         text-decoration: none;
         margin-top: 30px;
+        margin-left: 20px;
+        margin-right: 20px;
       }
-
-
+      
+      #redirectBtn:hover {
+        background-color: #2e2e2e;
+        transform: translateYp(-2x);
+      }
+      
       #learnRedirectContainer{
         height:40px;
       }
@@ -344,6 +349,7 @@
 /* SPREAD STYLES ***********************MAIN**********************************************************/
 
       #spreadCard{
+        margin-top: 5px;
         margin-left: 40px;
         margin-right: 40px;
         /* margin-top: -20px; */
@@ -352,9 +358,21 @@
       #spreadCardImg{
         width:210px;
         height:248px;
+        margin-bottom: 40px;
+        margin-top: 30px;
+
       }
 
+      #spreadPageContainer{
+        min-height: 740px;
+      }
 
+      #spreadLinkBtn{
+        height: 65px;
+        font-size: 20px;
+        width: 200px;
+        font-style: bold;
+      }
 /* MINOR STYLES ***********************MINOR LANDING**********************************************************/   
       
       #minorLinkBtn{
@@ -364,7 +382,7 @@
       }
 
       #minorOptionsPgContainer{
-        min-height: 450px;
+        min-height: 640px;
       }
 
       #minorOptionCard{
@@ -395,6 +413,7 @@
       #arcanaBlurbContainer{
         width:340px;
         height: 150px;
+        margin-bottom: 120px;
       }
       
 
@@ -403,7 +422,7 @@
       .linkBtn{
         font-size: 28px;
         width: 280px;
-        height: 35px;
+        height: 42px;
         font-style: bold;
         text-decoration: underline;
         border: 1px solid #272928;
@@ -429,7 +448,7 @@
       
       #footer{
         background-color: #7F97A4;
-        max-width: 1120px;
+        max-width: 1100px;
         height: 30px;
         /* padding-top: 5px;
         padding-bottom: 35px; */
@@ -437,7 +456,6 @@
         border-top: 2px solid #272928;
         border-right: 1px solid #272928;
         border-left: 1px solid #272928;
-
       }
 
 
