--- a/mysti_tarot/src/App.css
+++ b/mysti_tarot/src/App.css
@@ -36,7 +36,7 @@ img{
         #titleText, 
         .blurbContainer, 
         .linkBtn, 
-        #accContainer, {
+        #accContainer {
           border-radius: 15px;
           border: 1px solid #272928;
           border-bottom: 2px solid #272928;
